--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,12 +14,11 @@ jobs:
           key: node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             node-
-      - run: npm ci
-      - name: eslint
-        uses: icrawl/action-eslint@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: stefanoeb/eslint-action@1.0.0
+        with:
+          args: './src/**/*.{js,ts,tsx}'
       - name: npm build and unit
         run: |
+          npm ci
           npm run build
           npm test
