--- a/.github/workflows/lint-pr.yml
+++ b/.github/workflows/lint-pr.yml
@@ -7,9 +7,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - run: npm ci
-      - uses: a-b-r-o-w-n/eslint-action@v1
+      - uses: stefanoeb/eslint-action@1.0.0
         with:
-          repo-token: "${{ secrets.GITHUB_TOKEN }}"
-          files: "src/**/*"
-          extensions: ".js,.ts"
+          args: './src/**/*.{js,ts,tsx}'
