--- a/.github/workflows/lint-pr.yml
+++ b/.github/workflows/lint-pr.yml
@@ -12,4 +12,5 @@ jobs:
         uses: Krizzu/eslint-check-action@v1.0.0
         with:
           ghToken: ${{ secrets.GITHUB_TOKEN }}
+          eslintConfig: .eslintrc.js
           eslintExt: "ts, tsx"
