--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "lib/index.js",
   "scripts": {
     "test": "jasmine-ts test/**/*.spec.ts",
-    "lint": "tsc --noEmit && eslint src/**/*.{js,ts} --quiet --fix",
+    "lint": "eslint src/**/*.{js,ts}",
+    "lint:fix": "eslint src/**/*.{js,ts} --fix",
     "build": "tsc"
   },
   "repository": {
