--- a/.github/workflows/lint-pr.yml
+++ b/.github/workflows/lint-pr.yml
@@ -7,10 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1   
-      - run: npm ci
       - name: Lint
-        uses: Krizzu/eslint-check-action@v1.0.0
+        uses: a-b-r-o-w-n/eslint-action@v1
         with:
-          ghToken: ${{ secrets.GITHUB_TOKEN }}
-          eslintConfig: .eslintrc.js
-          eslintExt: "ts, tsx"
+          repo-token:  ${{ secrets.GITHUB_TOKEN }}
