--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "uno-js",
-  "version": "0.0.2",
+  "version": "0.1.0",
   "description": "Javascript common used functions",
-  "main": "lib/index.js",
+  "main": "index.js",
   "scripts": {
     "test": "jasmine-ts test/**/*.spec.ts",
     "lint": "eslint src/**/*.{js,ts}",
     "lint:fix": "eslint src/**/*.{js,ts} --fix",
-    "build": "tsc"
+    "build": "tsc",
+    "preparepackage": "npm run build && npm run copypackage",
+    "copypackage": "npx shx cp package.json dist"
   },
   "repository": {
     "type": "git",
