Unify the process of lint/build/publish (#6)
* Update withEnter.ts

* Update lint-pr.yml

* Update lint-pr.yml

* Update build.yml

* Update lint-pr.yml

* Update withEnter.ts

* Update withEnter.ts

* Update lint-pr.yml

* Update lint-pr.yml

* Test

* Remove maps

* Update lint-pr.yml

* PK

* Fix

* Integrate full process

* Remove lib

* Update path test

* Remove useless tool

* Restore prettier

* Limit to src folder

--- a/.github/workflows/lint-pr.yml
+++ b/.github/workflows/lint-pr.yml
@@ -6,8 +6,16 @@ jobs:
   eslint:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - name: ESLint
-        run: npx github-actions-eslint-annotator
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/checkout@v1   
+      - uses: actions/cache@v1
+        with:
+          path: ~/.npm
+          key: node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            node-
+      - run: npm ci
+      - name: Lint
+        uses: a-b-r-o-w-n/eslint-action@v1
+        with:
+          repo-token:  ${{ secrets.GITHUB_TOKEN }}
+          files: 'src/**/*'
