--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Javascript common used functions",
   "main": "index.js",
   "scripts": {
-    "test": "jasmine-ts test/**/*.spec.ts",
+    "test": "npx nyc jasmine-ts test/**/*.spec.ts",
+    "coverage": "npx nyc report --reporter=text-lcov > coverage.lcov",
     "lint": "eslint src/**/*.{js,ts}",
     "lint:fix": "eslint src/**/*.{js,ts} --fix",
     "build": "tsc",
@@ -39,5 +40,11 @@
     "ts-node": "^8.5.4",
     "tslint": "^5.20.1",
     "typescript": "^3.7.3"
+  },
+  "nyc": {
+    "exclude": [
+      "**/*.spec.ts",
+      "dist"
+    ]
   }
 }
