--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,10 +18,9 @@ jobs:
       - name: npm build
         run: |
           npm ci
-          npm run preparepackage
+          npm run build
       - name: Publish
-        uses: geoperez/merge-release@master
+        uses: mikeal/merge-release@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
-          PACKAGE_PATH: ./lib/
