--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "uno-js",
   "version": "0.1.0",
   "description": "Javascript common used functions",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "npx nyc jasmine-ts test/**/*.spec.ts",
     "coverage": "npx nyc report --reporter=text-lcov > coverage.lcov",
