Replacing jasmine with jest

--- a/package.json
+++ b/package.json
@@ -4,13 +4,33 @@
   "description": "Javascript common used functions",
   "main": "index.js",
   "scripts": {
-    "test": "npx nyc jasmine-ts test/**/*.spec.ts",
-    "coverage": "npx nyc report --reporter=text-lcov > coverage.lcov",
+    "test": "jest",
+    "cest": "jest --collectCoverage",
     "lint": "eslint src/**/*.{js,ts}",
     "lint:fix": "eslint src/**/*.{js,ts} --fix",
     "build": "tsc",
     "preparepackage": "npm run build && npm run copypackage",
     "copypackage": "npx shx cp package.json dist"
+  },
+  "jest": {
+    "automock": false,
+    "coverageReporters": ["lcov"],
+    "moduleFileExtensions": [
+      "ts",
+      "js"
+    ],
+    "transform": {
+      "^.+\\.(ts)$": "ts-jest"
+    },
+    "testMatch": [
+      "<rootDir>/test/**/*.spec.ts"
+    ],
+    "globals": {
+      "ts-jest": {
+        "diagnostics": false,
+        "tsConfig": "tsconfig.json"
+      }
+    }
   },
   "repository": {
     "type": "git",
@@ -36,7 +56,9 @@
     "eslint-plugin-prettier": "^3.1.2",
     "jasmine": "^3.1.0",
     "jasmine-ts": "^0.2.1",
+    "jest": "^24.9.0",
     "prettier": "^1.19.1",
+    "ts-jest": "^24.2.0",
     "ts-node": "^8.5.4",
     "tslint": "^5.20.1",
     "typescript": "^3.7.3"
