--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   },
   "jest": {
     "automock": false,
-    "coverageReporters": ["lcov"],
+    "coverageReporters": [
+      "lcov"
+    ],
     "moduleFileExtensions": [
       "ts",
       "js"
@@ -48,18 +50,17 @@
   },
   "homepage": "https://github.com/unosquare/uno-js#readme",
   "devDependencies": {
-    "@types/jasmine": "^3.3.15",
-    "@typescript-eslint/eslint-plugin": "^2.11.0",
-    "@typescript-eslint/parser": "^2.11.0",
+    "@types/jasmine": "^3.5.0",
+    "@typescript-eslint/eslint-plugin": "^2.12.0",
+    "@typescript-eslint/parser": "^2.12.0",
     "eslint": "^6.7.2",
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-prettier": "^3.1.2",
-    "jasmine": "^3.1.0",
-    "jasmine-ts": "^0.2.1",
+    "jasmine": "^3.5.0",
+    "jasmine-ts": "^0.3.0",
     "jest": "^24.9.0",
     "prettier": "^1.19.1",
     "ts-jest": "^24.2.0",
-    "ts-node": "^8.5.4",
     "tslint": "^5.20.1",
     "typescript": "^3.7.3"
   },
