--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "uno-js",
   "version": "0.2.2",
-  "description": "Javascript common used functions",
+  "description": "Javascript common used functions, zero dependencies",
   "main": "dist/index.js",
   "scripts": {
     "test": "jest",
@@ -50,24 +50,14 @@
   },
   "homepage": "https://github.com/unosquare/uno-js#readme",
   "devDependencies": {
-    "@types/jasmine": "^3.5.0",
     "@typescript-eslint/eslint-plugin": "^2.12.0",
     "@typescript-eslint/parser": "^2.12.0",
-    "eslint": "^6.7.2",
+    "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-prettier": "^3.1.2",
-    "jasmine": "^3.5.0",
-    "jasmine-ts": "^0.3.0",
     "jest": "^24.9.0",
     "prettier": "^1.19.1",
     "ts-jest": "^24.2.0",
-    "tslint": "^5.20.1",
-    "typescript": "^3.7.3"
-  },
-  "nyc": {
-    "exclude": [
-      "**/*.spec.ts",
-      "dist"
-    ]
+    "typescript": "^3.7.4"
   }
 }
