Improve code coverage

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Javascript common used functions, zero dependencies",
   "main": "dist/index.js",
   "scripts": {
-    "test": "jest",
-    "cest": "jest --collectCoverage",
+    "test": "jest --runInBand",
     "lint": "eslint src/**/*.{js,ts}",
     "lint:fix": "eslint src/**/*.{js,ts} --fix",
     "build": "tsc",
@@ -32,6 +31,15 @@
         "diagnostics": false,
         "tsConfig": "tsconfig.json"
       }
+    },
+    "collectCoverage": true,
+    "coverageThreshold": {
+      "global": {
+        "branches": 55,
+        "functions": 60,
+        "lines": 70,
+        "statements": -110
+      }
     }
   },
   "repository": {
@@ -51,14 +59,14 @@
   "homepage": "https://github.com/unosquare/uno-js#readme",
   "devDependencies": {
     "@types/jest": "^25.2.1",
-    "@typescript-eslint/eslint-plugin": "^2.27.0",
-    "@typescript-eslint/parser": "^2.27.0",
+    "@typescript-eslint/eslint-plugin": "^2.29.0",
+    "@typescript-eslint/parser": "^2.29.0",
     "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.1",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
-    "jest": "^25.3.0",
-    "prettier": "^2.0.4",
-    "ts-jest": "^25.3.1",
+    "jest": "^25.4.0",
+    "prettier": "^2.0.5",
+    "ts-jest": "^25.4.0",
     "typescript": "^3.8.3"
   }
 }
