--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   },
   "jest": {
     "automock": false,
+    "setupFiles": [
+      "./setupJest.js"
+    ],
     "coverageReporters": [
       "lcov",
       "text"
@@ -66,6 +69,7 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
     "jest": "^25.4.0",
+    "jest-fetch-mock": "^3.0.3",
     "prettier": "^2.0.5",
     "ts-jest": "^25.4.0",
     "typescript": "^3.8.3"
