--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "test": "jest --runInBand",
     "lint": "eslint src/**/*.{js,ts}",
     "lint:fix": "eslint src/**/*.{js,ts} --fix",
+    "prettier": "prettier --check src/**/*.ts*",
+    "prettier:fix": "prettier --write src/**/*.ts*",
+    "codestyle:fix": "npm run lint:fix && npm run prettier:fix",
     "build": "tsc",
     "preparepackage": "npm run build && npm run copypackage",
     "copypackage": "npx shx cp package.json dist"
@@ -63,15 +66,15 @@
   "homepage": "https://github.com/unosquare/uno-js#readme",
   "devDependencies": {
     "@types/jest": "^25.2.1",
-    "@typescript-eslint/eslint-plugin": "^2.29.0",
-    "@typescript-eslint/parser": "^2.29.0",
-    "eslint": "^6.8.0",
+    "@typescript-eslint/eslint-plugin": "^2.32.0",
+    "@typescript-eslint/parser": "^2.32.0",
+    "eslint": "^7.0.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
-    "jest": "^25.4.0",
+    "jest": "^26.0.1",
     "jest-fetch-mock": "^3.0.3",
     "prettier": "^2.0.5",
-    "ts-jest": "^25.4.0",
+    "ts-jest": "^25.5.1",
     "typescript": "^3.8.3"
   }
 }
