--- a/.eslintrc
+++ b/.eslintrc
@@ -12,8 +12,9 @@
         "jest": true
     },
     "extends": "eslint-config-unosquare",
+    "plugins": ["prettier"],
     "rules": {
-      "no-extend-native": 0,
-      "no-param-reassign": 0
+        "no-extend-native": 0,
+        "no-param-reassign": 0
     }
 }
