--- a/package.json
+++ b/package.json
@@ -74,12 +74,13 @@
   "homepage": "https://github.com/unosquare/uno-js#readme",
   "devDependencies": {
     "@types/jest": "^27.4.1",
-    "eslint": "^8.14.0",
-    "eslint-config-unosquare": "^0.1.3",
+    "eslint": "^8.15.0",
+    "eslint-config-unosquare": "^0.1.4",
+    "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.5.1",
     "jest-fetch-mock": "^3.0.3",
     "prettier": "^2.6.2",
     "ts-jest": "^27.1.4",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.4"
   }
 }
