--- a/package.json
+++ b/package.json
@@ -77,10 +77,11 @@
     "eslint": "^8.37.0",
     "eslint-config-unosquare": "^0.1.15",
     "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^27.5.1",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "jest-fetch-mock": "^3.0.3",
     "prettier": "^2.8.7",
-    "ts-jest": "^27.1.4",
+    "ts-jest": "^29.1.0",
     "typescript": "^5.0.3"
   }
 }
