--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "uno-js",
   "version": "3.0.0",
-  "description": "Javascript common used functions, zero dependencies",
+  "description": "JS/TS common used functions, zero dependencies",
   "main": "dist/index.js",
   "scripts": {
     "test": "jest --runInBand",
