--- a/package.json
+++ b/package.json
@@ -63,8 +63,9 @@
   },
   "keywords": [
     "Javascript",
-    "Functions",
-    "JS"
+    "functions",
+    "JS",
+    "typescript"
   ],
   "author": "Unosquare",
   "license": "MIT",
