--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,7 @@
     "rules": {
         "no-extend-native": 0,
         "no-param-reassign": 0,
-        "max-classes-per-file": 1
+        "max-classes-per-file": 0,
+        "@typescript-eslint/no-explicit-any": 0
     }
 }
