--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint src/**/*.{js,ts}",
     "lint:fix": "eslint src/**/*.{js,ts} --fix",
     "build": "tsc",
+    "watch": "tsc -w",
     "preparepackage": "npm run build && npm run copypackage",
     "copypackage": "npx shx cp package.json dist"
   },
