--- a/.eslintrc
+++ b/.eslintrc
@@ -1,17 +1,7 @@
 {
-    "settings": {
-        "import/resolver": {
-            "node": {
-                "paths": ["./src"]
-            }
-        }
-    },
-    "env": {
-        "es6": true,
-        "jest": true
-    },
-    "extends": "eslint-config-unosquare",
-    "plugins": ["prettier"],
+    "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended", "prettier"],
+    "parser": "@typescript-eslint/parser",
+    "plugins": ["prettier", "@typescript-eslint"],
     "rules": {
         "no-extend-native": 0,
         "no-param-reassign": 0,
