--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "jest --runInBand",
     "cest": "jest --collectCoverage --runInBand",
-    "lint": "eslint src/**/*.{js,ts}",
-    "lint:fix": "eslint src/**/*.{js,ts} --fix",
+    "lint": "eslint src/**/*.ts",
+    "lint:fix": "eslint src/**/*.ts --fix",
     "build": "tsc",
     "watch": "tsc -w",
     "preparepackage": "npm run build && npm run copypackage",
@@ -71,7 +71,6 @@
   "devDependencies": {
     "@types/jest": "^29.5.3",
     "eslint": "^8.47.0",
-    "eslint-config-unosquare": "^0.3.2",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.6.2",
     "jest-environment-jsdom": "^29.6.2",
