--- a/package.json
+++ b/package.json
@@ -70,8 +70,10 @@
   "homepage": "https://github.com/unosquare/uno-js#readme",
   "devDependencies": {
     "@types/jest": "^29.5.3",
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
     "eslint": "^8.47.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "eslint-config-prettier": "^9.0.0",
     "jest": "^29.6.2",
     "jest-environment-jsdom": "^29.6.2",
     "prettier": "^3.0.1",
