--- a/package.json
+++ b/package.json
@@ -69,8 +69,9 @@
   },
   "homepage": "https://github.com/unosquare/uno-js#readme",
   "devDependencies": {
-    "@types/jest": "^29.5.5",
-    "@typescript-eslint/eslint-plugin": "^6.7.5",
+    "@types/jest": "^29.5.6",
+    "@types/node": "^20.8.7",
+    "@typescript-eslint/eslint-plugin": "^6.8.0",
     "eslint": "^8.51.0",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-config-prettier": "^9.0.0",
