--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "3.94.0",
   "description": "JS/TS common used functions, zero dependencies",
   "main": "dist/index.js",
+  "type": "module",
   "scripts": {
     "test": "jest --runInBand",
     "cest": "jest --collectCoverage --runInBand",
@@ -70,8 +71,8 @@
   "homepage": "https://github.com/unosquare/uno-js#readme",
   "devDependencies": {
     "@types/jest": "^29.5.12",
-    "@typescript-eslint/eslint-plugin": "^7.7.0",
-    "eslint": "^9.1.0",
+    "@typescript-eslint/eslint-plugin": "^7.7.1",
+    "eslint": "^9.1.1",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-config-prettier": "^9.1.0",
     "jest": "^29.7.0",
