--- a/package.json
+++ b/package.json
@@ -70,15 +70,13 @@
   },
   "homepage": "https://github.com/unosquare/uno-js#readme",
   "devDependencies": {
+    "@eslint/js": "^9.1.1",
     "@types/jest": "^29.5.12",
-    "@typescript-eslint/eslint-plugin": "^7.7.1",
     "eslint": "^9.1.1",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-config-prettier": "^9.1.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "prettier": "^3.2.5",
     "ts-jest": "^29.1.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.7.1"
   }
 }
