--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
         "allowSyntheticDefaultImports": true,
         "strict": true,
         "forceConsistentCasingInFileNames": true,
-        "module": "ES2022",
+        "module": "CommonJS",
         "moduleResolution": "node",
         "resolveJsonModule": true,
         "outDir": "./dist",
