--- a/package.json
+++ b/package.json
@@ -6,20 +6,13 @@
   "scripts": {
     "test": "jest --runInBand",
     "cest": "jest --collectCoverage --runInBand",
-    "lint": "eslint src/**/*.ts",
-    "lint:fix": "eslint src/**/*.ts --fix",
+    "lint": "pnpm biome check ./src",
+    "lint:fix": "pnpm biome check --write ./src",
+    "lint:test": "pnpm biome check --write ./test",
     "build": "tsc",
     "watch": "tsc -w",
     "preparepackage": "npm run build && npm run copypackage",
     "copypackage": "npx shx cp package.json dist"
-  },
-  "prettier": {
-    "endOfLine": "auto",
-    "semi": true,
-    "trailingComma": "all",
-    "singleQuote": true,
-    "printWidth": 120,
-    "tabWidth": 4
   },
   "jest": {
     "coverageReporters": [
@@ -69,14 +62,11 @@
   },
   "homepage": "https://github.com/unosquare/uno-js#readme",
   "devDependencies": {
-    "@eslint/js": "^9.13.0",
-    "@types/eslint__js": "^8.42.3",
+    "@biomejs/biome": "1.9.4",
     "@types/jest": "^29.5.14",
-    "eslint": "^9.13.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "ts-jest": "^29.2.5",
-    "typescript": "^5.6.3",
-    "typescript-eslint": "^8.11.0"
+    "typescript": "^5.6.3"
   }
 }
