[skip ci] Update biome

--- a/biome.json
+++ b/biome.json
@@ -11,7 +11,10 @@
 	},
 	"formatter": {
 		"enabled": true,
-		"indentStyle": "tab"
+		"indentStyle": "space",
+		"indentWidth": 4,
+		"lineEnding": "crlf",
+		"lineWidth": 120
 	},
 	"organizeImports": {
 		"enabled": true
@@ -24,7 +27,7 @@
 	},
 	"javascript": {
 		"formatter": {
-			"quoteStyle": "double"
+			"quoteStyle": "single"
 		}
 	}
 }
